--- a/src/main/webapp/script/rol/Create.xhtml
+++ b/src/main/webapp/script/rol/Create.xhtml
@@ -71,7 +71,7 @@
                     </div>
                 </div>
 
-                <p:commandLink styleClass="btn btn-default btn-flat fa fa-times" action="#{rolController.prepareList}" value="&nbsp;&nbsp;#{bundle.Cancel}" immediate="true" ajax="false"/>
+                <p:commandLink styleClass="btn btn-default btn-flat fa fa-reply" action="#{rolController.prepareList}" value="&nbsp;&nbsp;Volver" immediate="true" ajax="false"/>
                 &nbsp;&nbsp;
                 <p:commandLink styleClass="btn btn-primary btn-flat fa fa-save" action="#{rolController.create}" value="&nbsp;&nbsp;#{bundle.CreateRolSaveLink}" ajax="false" rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}"/>                     
             </h:form>
