--- a/src/main/webapp/script/usuario/Create.xhtml
+++ b/src/main/webapp/script/usuario/Create.xhtml
@@ -25,7 +25,7 @@
             <div class="page-header">
                 <div class="row">
                     <div class="col-sm-6 col-xs-12">
-                        <h1><i class="fa fa-building page-header-icon"></i>&nbsp;&nbsp;#{bundle.CreateUsuarioTitle}</h1>
+                        <h1><i style="font-size: small;" class="fa fa-plus"/><i class="fa fa-user page-header-icon"></i>&nbsp;&nbsp;#{bundle.CreateUsuarioTitle}</h1>
                         <p:commandLink title="Help" onclick="PF('helpDialog').show()" styleClass="text-info" >
                             <i class="fa fa-info-circle"/>
                         </p:commandLink> 
