--- a/src/main/webapp/script/area/Create.xhtml
+++ b/src/main/webapp/script/area/Create.xhtml
@@ -78,12 +78,10 @@
                     </div>
                 </div>
                 <p:toolbar>  
-                    <p:toolbarGroup align="right">
-                        <p:commandLink styleClass="btn btn-primary btn-flat fa fa-save" action="#{areaController.create}" value="&nbsp;&nbsp;#{bundle.CreateAreaSaveLink}" ajax="false"/>        
-                    </p:toolbarGroup>
-
                     <p:toolbarGroup align="left">
                         <p:commandLink styleClass="btn btn-default btn-flat fa fa-reply" action="#{areaController.prepareList}" value="&nbsp;&nbsp;Volver" immediate="true" ajax="false"/>
+                        <p:separator/>
+                        <p:commandLink styleClass="btn btn-primary btn-flat fa fa-save" action="#{areaController.create}" value="&nbsp;&nbsp;#{bundle.CreateAreaSaveLink}" ajax="false"/> 
                     </p:toolbarGroup>
                 </p:toolbar>
 
