--- a/src/main/webapp/script/login.xhtml
+++ b/src/main/webapp/script/login.xhtml
@@ -112,6 +112,13 @@
         <div id="footer">
             <div class="container">
                 <p class="text-muted" align="center">Powered by GoDesk Chile. <a href="http://www.godesk.cl">www.godesk.cl</a>.</p>
+                <p class="text-muted" align="center">
+                    <h:form>
+                          <p:commandLink action="/customer/index.xhtml?faces-redirect=true" immediate="true"
+                                           value="Portal de clientes beltec">
+                            </p:commandLink>
+                    </h:form>
+                </p>
             </div>
         </div>
 
