--- a/src/main/webapp/script/cliente/Create.xhtml
+++ b/src/main/webapp/script/cliente/Create.xhtml
@@ -23,12 +23,10 @@
                     <h:panelGrid id="datosDelCliente" columns="3">
                         <p:outputLabel id="rutLbl" value="#{bundle.CreateClienteLabel_rut}" for="rut" style="font-weight:bold"/>
                         <p:inputText id="rut" value="#{clienteController.selected.rut}" 
-                                     title="#{bundle.CreateClienteTitle_rut}" validator="#{inputValidationBean.validarRut}"
-                                     required="true" requiredMessage="Es necesario el RUT del cliente">
+                                     title="#{bundle.CreateClienteTitle_rut}" validator="#{inputValidationBean.validarRut}">
                             <p:ajax event="blur" listener="#{clienteController.onBlurRutInput}" update=":form"/>
                         </p:inputText>
-                        <p:message id="rutMsg" display="both" for="rut"/>
-
+                        
                         <p:outputLabel value="#{bundle.CreateClienteLabel_nombres}" for="nombres" style="font-weight:bold"/>
                         <p:inputText disabled="#{not clienteController.canEdit}" id="nombres" value="#{clienteController.selected.nombres}" title="#{bundle.CreateClienteTitle_nombres}" required="true" requiredMessage="El Nombre es un dato requerido."/>
                         <p:message display="both" for="nombres"/>
