Edit HelpdeskScheduler to avoid sending emails to emails with no reply names spam description+
cherry pickit

--- a/src/main/webapp/script/index.xhtml
+++ b/src/main/webapp/script/index.xhtml
@@ -528,7 +528,7 @@
 
                     <p:commandButton value="Aplicar" icon="ui-icon-circle-minus" 
                                      actionListener="#{casoController.saveBlackList}"
-                                     update=":mainform:messages :form0:ID_TABLA" oncomplete="PF('blackListSelected').hide()"/> 
+                                     update=":mainform:messages :form0:ID_TABLA" /> 
 
                     <p:commandButton value="#{bundle.decline}" onclick="PF('blackListSelected').hide()" type="button" /> 
                 </h:form>
